done until product id

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0"
   },
+  "homepage": "https://dragonslayer77.github.io/ReactRouter/",
   "scripts": {
     "start": "webpack-dev-server --mode development --env.ENVIRONMENT=development",
     "lint": "eslint './src/**/*.js*'",
